--- a/src/main/resources/com/example/guesswhatgame/game-view.fxml
+++ b/src/main/resources/com/example/guesswhatgame/game-view.fxml
@@ -22,7 +22,8 @@
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
+    <Label fx:id="welcomeText" text="Wanna try to guess my number?"/>
+    <Label fx:id="wrongInput"/>
     <HBox alignment="CENTER" spacing="30" maxWidth="Infinity">
         <RadioButton fx:id="switcherHundred" text="1-100" toggleGroup="$RangeGroup"/>
         <RadioButton fx:id="switcherEasy" text="Easy" toggleGroup="$DifficultyGroup"/>
